<resources>
    <string name="app_name">Estimote Configuration</string>
    <string name="uuid">UUID</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="device_connected">Connected to Device</string>
    <string name="device_disconnected">Device Disconnected</string>
    <string name="save">Save</string>
    <string name="sync">Sync Settings</string>
    <string name="syncing">Syncing Settings</string>
    <string name="sync_successful">Successfully Synced Settings</string>
    <string name="update_firmware">Update Firmware</string>
    <string name="not_connected">Not connected to a device.</string>
    <string name="not_implemented">This feature has yet to be implemented.</string>

    <!-- TODO: Remove the code that depends of the following strings -->
    <string name="searching">Searching</string>
    <string name="alert_ok">Ok</string>
    <string name="detected_devices">Detected devices</string>
    <string name="wait_until_beacon_connected">You have to wait until your beacon is connected.</string>
    <string name="checking_firmware">Checking firmware</string>
    <string name="fetching_data_from_cloud">Fetching data from cloud.</string>
    <string name="device_firmware_up_to_date">Device firmware is up to date</string>
    <string name="preparing_for_writing_settings">Preparing for writing settings.</string>
    <string name="updating_firmware">Updating firmware</string>
    <string name="preparing_for_update">Preparing for update.</string>
    <string name="update_successful">Update successful</string>
    <string name="writing_settings">Writing settings</string>
    <string name="please_wait">Please wait.</string>
    <string name="configuration_succeeded">Configuration succeeded.</string>
    <string name="configure_next_beacon">Configure next beacon</string>
    <string-array name="tags_array">
        <item>store entrance</item>
        <item>cash registers</item>
        <item>customer service</item>
        <item>toys</item>
        <item>electronics</item>
        <item>clothing</item>
        <item>beauty</item>
        <item>groceries</item>
    </string-array>
</resources>
